--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,5 +1,6 @@
 <ion-view view-title="{{message}}">
 	<ion-content>
 		<h1>{{ message }}</h1>
+		<a class="button button-full button-assertive" href="#/">logout</a>
 	</ion-content>
 </ion-view>
