--- a/www/templates/tab-portfolio.html
+++ b/www/templates/tab-portfolio.html
@@ -1,5 +1,21 @@
-<ion-view view-title="{{message}}">
+<ion-view>
+	<ion-header-bar class="bar-light">
+		<div class="buttons">
+			<button class="button icon ion-plus-round" ng-click="doSomething()"></button>
+		</div>
+		<h1 class="title">portfolios</h1>
+	</ion-header-bar>
 	<ion-content>
-		<h1>{{ message }}</h1>
+		<ion-list>
+			<ion-item>
+				portfolio 1
+			</ion-item>
+			<ion-item>
+				portfolio 2
+			</ion-item>
+			<ion-item>
+				portfolio 3
+			</ion-item>
+		</ion-list>
 	</ion-content>
 </ion-view>
