--- a/www/templates/tab-quote.html
+++ b/www/templates/tab-quote.html
@@ -1,5 +1,8 @@
-<ion-view view-title="{{message}}">
+<ion-view>
+	<ion-header-bar class="bar-light">
+		<h1 class="title">quote</h1>
+	</ion-header-bar>
 	<ion-content>
-		<h1>{{ message }}</h1>
+		
 	</ion-content>
 </ion-view>
