--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,46 +1,49 @@
 <ion-slide-box>
   <ion-slide>
-	  <ion-view>
-	  	<ion-header-bar class="bar-light">
-	  		<h1 class="title">Log In</h1>
-	  	</ion-header-bar>
-	    <ion-content>
-	    	<div class="list">
-	    	  <label class="item item-input item-floating-label">
-	    	    <span class="input-label">email</span>
-	    	    <input type="email" placeholder="email">
-	    	  </label>
-	    	  <label class="item item-input item-floating-label">
-	    	    <span class="input-label">password</span>
-	    	    <input type="password" placeholder="password">
-	    	  </label>
-	    	  <a class="button button-block button-positive" href="#/tab/portfolios">login</a>
-	    	 </div>
-		</ion-content>
-	  </ion-view>
+    <ion-view>
+      <ion-header-bar class="bar-light">
+        <h1 class="title">login</h1>
+      </ion-header-bar>
+      <ion-content>
+        <form ng-submit="login()">
+            <div class="list">
+              <label class="item item-input item-floating-label">
+                <span class="input-label">email</span>
+                <input type="email" ng-model="user.email" placeholder="email">
+              </label>
+              <label class="item item-input item-floating-label">
+                <span class="input-label">password</span>
+                <input type="password" ng-model="user.password" placeholder="password">
+              </label>
+             </div>
+             <div>
+                <button class="button button-block button-positive" type="submit">login</button>
+            </div>
+        </form>
+        </ion-content>
+    </ion-view>
   </ion-slide>
   <ion-slide>
     <ion-view>
-    	<ion-header-bar class="bar-light">
-    		<h1 class="title">Register</h1>
-    	</ion-header-bar>
-    	<ion-content>
-    		<div class="list">
-    		  <label class="item item-input item-floating-label">
-    		    <span class="input-label">first name</span>
-    		    <input type="text" placeholder="first name">
-    		  </label>
-    		  <label class="item item-input item-floating-label">
-    		    <span class="input-label">email</span>
-    		    <input type="email" placeholder="email">
-    		  </label>
-    		  <label class="item item-input item-floating-label">
-    		    <span class="input-label">password</span>
-    		    <input type="password" placeholder="password">
-    		  </label>
-    		  <a class="button button-block button-balanced" href="#/tab/portfolios">register</a>
-    		</div>
-    	</ion-content>
+      <ion-header-bar class="bar-light">
+        <h1 class="title">Register</h1>
+      </ion-header-bar>
+      <ion-content>
+        <div class="list">
+          <label class="item item-input item-floating-label">
+            <span class="input-label">first name</span>
+            <input type="text" placeholder="first name">
+          </label>
+          <label class="item item-input item-floating-label">
+            <span class="input-label">email</span>
+            <input type="email" placeholder="email">
+          </label>
+          <label class="item item-input item-floating-label">
+            <span class="input-label">password</span>
+            <input type="password" placeholder="password">
+          </label>
+          <a class="button button-block button-balanced" href="#/tab/portfolios">register</a>
+        </div>
+      </ion-content>
     </ion-view>
   </ion-slide>
-</ion-slide-box>
