--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,6 +1,6 @@
 <ion-view view-title="{{message}}">
 	<ion-content>
 		<h1>{{ message }}</h1>
-		<a class="button button-full button-assertive" href="#/">logout</a>
+		<button class="button button-full button-assertive" on-tap="logout()">logout</button>
 	</ion-content>
 </ion-view>
