--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,18 +1,13 @@
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
-
-  <!-- Portfolio Tab -->
-  <ion-tab title="Portfolios" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/portfolios">
-    <ion-nav-view name="tab-portfolio"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Chats Tab -->
-  <ion-tab title="Quote" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/quote">
-    <ion-nav-view name="tab-quote"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
-
-</ion-tabs>
+<div class="tabs-striped tabs-color-assertive">
+  <ion-tabs>
+    <ion-tab title="Portfolios" href="#/tab/portfolios">
+      <ion-nav-view name="tab-portfolio"></ion-nav-view>
+    </ion-tab>
+    <ion-tab title="Quote" href="#/tab/quote">
+      <ion-nav-view name="tab-quote"></ion-nav-view>
+    </ion-tab>
+    <ion-tab title="Account" href="#/tab/account">
+      <ion-nav-view name="tab-account"></ion-nav-view>
+    </ion-tab>
+  </ion-tabs>
+</div>
