--- a/www/templates/tab-portfolio.html
+++ b/www/templates/tab-portfolio.html
@@ -7,14 +7,11 @@
 	</ion-header-bar>
 	<ion-content>
 		<ion-list>
-			<ion-item>
-				portfolio 1
-			</ion-item>
-			<ion-item>
-				portfolio 2
-			</ion-item>
-			<ion-item>
-				portfolio 3
+			<ion-item item="item" ng-repeat="portfolio in user.portfolios">
+				<h2>{{ portfolio.name }}</h2>
+				<ion-option-button class="button-assertive">
+				Delete
+				</ion-option-button>
 			</ion-item>
 		</ion-list>
 	</ion-content>
