--- a/www/templates/tab-portfolio.html
+++ b/www/templates/tab-portfolio.html
@@ -7,7 +7,8 @@
 	</ion-header-bar>
 	<ion-content>
 		<ion-list>
-			<ion-item item="item" ng-repeat="portfolio in user.portfolios">
+			<ion-item ng-repeat="portfolio in user.portfolios" item="item"
+				href="#/tab/portfolios/{{portfolio.$id}}">
 				<h2>{{ portfolio.name }}</h2>
 				<ion-option-button class="button-assertive">
 				Delete
