--- a/www/templates/portfolio-detail.html
+++ b/www/templates/portfolio-detail.html
@@ -1,6 +1,6 @@
 <ion-view>
 	<ion-header-bar class="bar-light">
-		<a class="button icon-left ion-chevron-left button-clear button-dark"
+		<a class="button button-icon icon ion-chevron-left"
 		href="#/tab/portfolios"></a>
 		<h1 class="title">{{portfolio.name}}</h1>
 	</ion-header-bar>
