--- a/www/templates/tab-portfolio.html
+++ b/www/templates/tab-portfolio.html
@@ -1,16 +1,22 @@
 <ion-view>
 	<ion-header-bar class="bar-light">
-		<div class="buttons">
-			<button class="button icon ion-plus-round" ng-click="doSomething()"></button>
-		</div>
 		<h1 class="title">portfolios</h1>
 	</ion-header-bar>
-	<ion-content>
+	<ion-header-bar class="bar-subheader item-input-inset">
+		<label class="item-input-wrapper">
+		  <input type="text" ng-model="newPortfolioName" placeholder="new portfolio name">
+		</label>
+		<button class="button button-clear" ng-click="createPortfolio()">
+		  add
+		</button>
+	</ion-header-bar>
+	<ion-content class="has-subheader">
 		<ion-list>
 			<ion-item ng-repeat="portfolio in user.portfolios" item="item"
 				href="#/tab/portfolios/{{portfolio.$id}}">
 				<h2>{{ portfolio.name }}</h2>
-				<ion-option-button class="button-assertive">
+				<ion-option-button class="button-assertive"
+				ng-click="deletePortfolio(portfolio)">
 				Delete
 				</ion-option-button>
 			</ion-item>
