--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -5,21 +5,19 @@
         <h1 class="title">login</h1>
       </ion-header-bar>
       <ion-content>
-        <form ng-submit="login()">
             <div class="list">
               <label class="item item-input item-floating-label">
                 <span class="input-label">email</span>
-                <input type="email" ng-model="user.email" placeholder="email">
+                <input type="text" ng-model="loginUser.email" placeholder="email">
               </label>
               <label class="item item-input item-floating-label">
                 <span class="input-label">password</span>
-                <input type="password" ng-model="user.password" placeholder="password">
+                <input type="password" ng-model="loginUser.password" placeholder="password">
               </label>
              </div>
              <div>
-                <button class="button button-block button-positive" type="submit">login</button>
+                <button class="button button-block button-positive" ng-click="login()">login</button>
             </div>
-        </form>
         </ion-content>
     </ion-view>
   </ion-slide>
@@ -32,17 +30,19 @@
         <div class="list">
           <label class="item item-input item-floating-label">
             <span class="input-label">first name</span>
-            <input type="text" placeholder="first name">
+            <input type="text" ng-model="registerUser.firstName"placeholder="first name">
           </label>
           <label class="item item-input item-floating-label">
             <span class="input-label">email</span>
-            <input type="email" placeholder="email">
+            <input type="text" ng-model="registerUser.email" placeholder="email">
           </label>
           <label class="item item-input item-floating-label">
             <span class="input-label">password</span>
-            <input type="password" placeholder="password">
+            <input type="password" ng-model="registerUser.password" placeholder="password">
           </label>
-          <a class="button button-block button-balanced" href="#/tab/portfolios">register</a>
+        </div>
+         <div>
+            <button class="button button-block button-balanced" ng-click="register()">register</button>
         </div>
       </ion-content>
     </ion-view>
