removed lookup table

--- a/www/templates/tab-portfolio.html
+++ b/www/templates/tab-portfolio.html
@@ -6,7 +6,7 @@
 		<label class="item-input-wrapper">
 		  <input type="text" ng-model="newPortfolioName" placeholder="new portfolio name">
 		</label>
-		<button class="button button-clear" ng-click="createPortfolio()">
+		<button class="button button-clear" ng-click="addPortfolio()">
 		  add
 		</button>
 	</ion-header-bar>
