basic quote retrieval

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,6 +1,12 @@
 <ion-view view-title="{{message}}">
+	<ion-header-bar class="bar-light">
+		<h1 class="title">account</h1>
+	</ion-header-bar>
 	<ion-content>
 		<h1>{{ message }}</h1>
 		<button class="button button-full button-assertive" on-tap="logout()">logout</button>
+		<div class="row">
+			<div class="col col-bottom">ayo</div>
+		</div>
 	</ion-content>
 </ion-view>
